--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             About
        </div>
       </div>
+      <div class="row heading">
+         <div class="span12">
+            BitstarterTitle
+         </div>
+       </div>  
       <div class="row subheading">
         <div class="span12">
            <p class="lead">This is my first bitstarter project.</p>
@@ -81,6 +86,11 @@
          </div>
        </div>
        <div class="row faq">
+          <div class="span12">
+             FAQ
+          </div>
+        </div>
+        <div class="row footer">
           <div class="span12">
               Footer
           </div>
