another try at this

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
            LOGO
        </div>
        <div class="span6 blank">
-           Blank span6
+           Blank
        </div>
-       <div class="span 4 about">
+       <div class="span4 about">
             About
        </div>
       </div>
       <div class="row heading">
          <div class="span12">
-            BitstarterTitle
+            Bitstarter Title
          </div>
        </div>  
       <div class="row subheading">
@@ -82,7 +82,7 @@
        </div>
        <div class"row section2">
          <div class="span12">
-           Marketing Section 2
+          Marketing Section 2
          </div>
        </div>
        <div class="row faq">
