Changed bitstarter idea

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
    <div class="container">
      <div class="row-fluid heading">
        <div class="span12">
-	 <h1>Bicycle Research</h1>
+	 <h1>Civic Research Commons</h1>
        </div>
      </div>
      <div class="row-fluid subheading">
        <div class="span12">
-	 <p class="lead">Do Green Bikelanes, separated cycletracks, bike infrastructure make a difference?</p>
+	 <p class="lead">Quick-response Research that will make your life better </p>
        </div>
      </div>
      <div class="row-fluid pitch">
