--- a/index.html
+++ b/index.html
@@ -121,8 +121,6 @@
     </div>
   </div>     
 
-
-
    <div class="container">
      <div class="row-fluid heading">
        <div class="span12">
@@ -166,6 +164,7 @@
 	     <div class="bar bar-success" style="width: 60%;"></div>
              <div class="bar bar-warning" style="width: 40%;"></div>
            </div>
+           </div>
          </div>
          <div class="row-fluid">
          <div class="span6 offset3 order">
@@ -183,7 +182,7 @@
      </div>
      <div class="row-fluid section1">
        <div class="span5 offset1 asset">
-	 <img class="img-polaroid" alt="Placeholder" img="http://placehold.it/480x300">
+	 <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
        </div>
        <div class="span5 copy">
 	 <p>
